Remove signup and login systems, composer and dotenv

--- a/app.html
+++ b/app.html
@@ -27,8 +27,7 @@
             <div class="startup-container__elements">
                 <h1>Bienvenue sur Jigswap</h1>
                 <div class="startup-container__buttons">
-                    <a class="signup-button" href="signup.php">S'inscrire</a>
-                    <a class="login-button" href="login.php">Se connecter</a>
+                    <a class="signup-button" href="permissions.html">Accéder à l'app</a>
                 </div>
             </div>
         </div>
