Test camera permissions

--- a/camera.html
+++ b/camera.html
@@ -8,9 +8,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, viewport-fit=cover">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Permissions - Jigswap</title>
+    <title>Caméra - Jigswap</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/permissions.css">
+    <link rel="stylesheet" href="assets/css/app.css">
     <link rel="manifest" href="manifest.json">
     <link href="assets/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="assets/fontawesome/css/brands.css" rel="stylesheet">
@@ -20,9 +20,7 @@
 
 <body>
 
-<p>permissions</p>
-
-<p class="errorMessage"></p>
+<p>caméra</p>
 
 </body>
 
