--- a/camera.html
+++ b/camera.html
@@ -15,6 +15,7 @@
     <link href="assets/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="assets/fontawesome/css/brands.css" rel="stylesheet">
     <link href="assets/fontawesome/css/solid.css" rel="stylesheet">
+    <script src="assets/js/camera.js"></script>
 </head>
 
 <body>
