fix bug for iOS

--- a/camera.html
+++ b/camera.html
@@ -19,7 +19,7 @@
 
 <body>
 
-<video id="camera-video" autoplay></video>
+<video id="camera-video" autoplay playsinline></video>
 <p id="error-message"></p>
 
 </body>
