Improve camera page with design

--- a/camera.html
+++ b/camera.html
@@ -19,8 +19,9 @@
 
 <body>
 
-<video id="camera-video" autoplay playsinline></video>
-<p id="error-message"></p>
+<h2>Souriez ! :)</h2>
+    <video id="camera-video" autoplay playsinline></video>
+<button>Prendre en photo</button>
 
 </body>
 
