Test photo-taking and add puzzle page

--- a/camera.html
+++ b/camera.html
@@ -21,7 +21,7 @@
 
 <h2>Souriez ! :)</h2>
     <video id="camera-video" autoplay playsinline></video>
-<button>Prendre en photo</button>
+<button id="take-photo-button">Prendre en photo</button>
 
 </body>
 
