added defer in camera.html

--- a/camera.html
+++ b/camera.html
@@ -14,7 +14,7 @@
     <link href="assets/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="assets/fontawesome/css/brands.css" rel="stylesheet">
     <link href="assets/fontawesome/css/solid.css" rel="stylesheet">
-    <script src="assets/js/camera.js"></script>
+    <script src="assets/js/camera.js" defer></script>
 </head>
 
 <body>
@@ -24,5 +24,4 @@
 <button id="take-photo-button">Prendre en photo</button>
 
 </body>
-
 </html>
