--- a/camera.html
+++ b/camera.html
@@ -14,7 +14,6 @@
     <link href="assets/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="assets/fontawesome/css/brands.css" rel="stylesheet">
     <link href="assets/fontawesome/css/solid.css" rel="stylesheet">
-    <script src="assets/js/camera.js" defer></script>
 </head>
 
 <body>
@@ -22,6 +21,8 @@
 <h2>Souriez ! :)</h2>
     <video id="camera-video" autoplay playsinline></video>
 <button id="take-photo-button">Prendre en photo</button>
+
+<script src="assets/js/camera.js"></script>
 
 </body>
 </html>
