defer on camera.html

--- a/camera.html
+++ b/camera.html
@@ -22,7 +22,7 @@
     <video id="camera-video" autoplay playsinline></video>
 <button id="take-photo-button">Prendre en photo</button>
 
-<script src="assets/js/camera.js"></script>
+<script src="assets/js/camera.js" defer></script>
 
 </body>
 </html>
