Add index.html, fonctionnalites.html, css files and images

--- a/index.html
+++ b/index.html
@@ -1,18 +1,91 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="width=device-width, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#A12B44" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="assets/css/index.css" />
     <title>Jigswap</title>
-    <link rel="manifest" href="manifest.json">
-</head>
-<body>
-    
-    <a href="app.html">Accéder à l'app</a>
+  </head>
+  <nav>
+    <a class="nav_name" href="./index.html">JIGSWAP.</a>
+    <div>
+      <a class="first_a" href="#">Accueil</a>
+      <a href="./fonctionnalités.html">Fonctionnalités</a>
+      <button class="nav_button pwa_button">Télécharger</button>
+    </div>
+  </nav>
+  <body>
+    <section class="hero">
+      <img
+        class="hero_background"
+        src="./assets/img/hero_background2.png"
+        alt=""
+      />
+      <div class="container_hero">
+        <div class="slogan">
+          <p>Assemble.</p>
+          <p>Découvre.</p>
+          <p>Collectionne.</p>
+        </div>
+        <p class="slogan_description">
+          Assemble des puzzles. Découvre des souvenirs uniques. Collectionne les
+          victoires en te surpassant.
+        </p>
+        <button class="pwa_button">Télécharger la PWA</button>
+      </div>
+      <img class="hero_pic1" src="./assets/img/hero_pic1.png" alt="" />
+      <img class="hero_pic2" src="./assets/img/hero_pic2.png" alt="" />
+    </section>
 
-</body>
+    <section class="first_description">
+      <div class="text_container">
+        <div class="text_container_p">
+          <h1>Qu'est-ce que Jigswap ?</h1>
+          <p class="first_paragraph">
+            Jigswap est une application qui transforme la manière dont tu
+            partages et explores tes propres moments. Chaque jour, tu reçois une
+            notification te demandant de prendre une photo. Une fois prise, il y
+            a une particularité : elle est transformée en puzzle que tu dois
+            assembler. Le but est de reconstituer ces souvenirs le plus
+            rapidement possible pour atteindre les meilleurs temps !
+          </p>
+          <br />
+          <p class="first_paragraph">
+            Avec Jigswap, tu ne fais pas que partager des photos, tu participes
+            à un jeu interactif et amusant, tout en redécouvrant les moments
+            uniques de ton quotidien et en te surpassant.
+          </p>
+        </div>
+        <img class="mockup1" src="./assets/img/mockup1.png" alt="" />
+      </div>
+    </section>
+    <section class="sec_description">
+      <div class="text_container">
+        <img class="mockup2" src="./assets/img/mockup2.png" alt="" />
+        <div class="text_container_p">
+          <h1>À chaque jour sa surprise.</h1>
+          <p class="sec_paragraph">
+            Avec Jigswap, chaque jour apporte sa surprise unique. Chaque matin,
+            tu reçois une notification te demandant de capturer un instant de ta
+            journée. Une fois ta photo prise, les surprises commencent : ta
+            photo est transformée en un puzzle intrigant. L'objectif est de
+            reconstituer ces souvenirs aussi rapidement que possible. Redécouvre
+            les moments inattendus que tu as vécu tout en t'amusant à résoudre
+            les puzzles. Avec Jigswap, chaque jour est une nouvelle aventure
+            pleine de surprises à partager et à explorer.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="third_description">
+      <h1>Toujours là ? Rejoins-nous !</h1>
+      <p>
+        Rejoins-nous sur Jigswap pour partager, résoudre des puzzles et créer
+        des souvenir ensemble !
+      </p>
+      <button class="pwa_button">Télécharger la PWA</button>
+    </section>
+  </body>
 </html>
-
-<!-- FLAVIE -->
