--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -13,7 +13,7 @@
     <div>
       <a class="first_a" href="index.html">Accueil</a>
       <a class="sec_a" href="#">Fonctionnalités</a>
-      <button class="nav_button pwa_button">Télécharger</button>
+      <button onclick="window.location.href = 'app.html';" class="nav_button pwa_button">Télécharger</button>
     </div>
   </nav>
   <body>
