--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <a class="nav_name" href="./index.html">JIGSWAP.</a>
     <div>
       <a class="first_a" href="#">Accueil</a>
-      <a href="./fonctionnalités.html">Fonctionnalités</a>
-      <button class="nav_button pwa_button">Télécharger</button>
+      <a href="./fonctionnalites.html">Fonctionnalités</a>
+      <button onclick="window.location.href = 'app.html';" class="nav_button pwa_button">Télécharger</button>
     </div>
   </nav>
   <body>
@@ -33,7 +33,8 @@
           Assemble des puzzles. Découvre des souvenirs uniques. Collectionne les
           victoires en te surpassant.
         </p>
-        <button class="pwa_button">Télécharger la PWA</button>
+        <button onclick="window.location.href = 'app.html';" class="pwa_button">Télécharger la PWA</button>
+      </div>
       </div>
       <img class="hero_pic1" src="./assets/img/hero_pic1.png" alt="" />
       <img class="hero_pic2" src="./assets/img/hero_pic2.png" alt="" />
@@ -85,7 +86,7 @@
         Rejoins-nous sur Jigswap pour partager, résoudre des puzzles et créer
         des souvenir ensemble !
       </p>
-      <button class="pwa_button">Télécharger la PWA</button>
+      <button onclick="window.location.href = 'app.html';" class="pwa_button">Télécharger la PWA</button>
     </section>
   </body>
 </html>
