change success javascript

--- a/success.html
+++ b/success.html
@@ -18,7 +18,16 @@
 
 <body>
 
-    <div id="completion-time" class="time-display"></div>
+    <h1 id="completion-time"></h1>
+
+    <div class="container">
+        <div class="success-container">
+            <div class="success-text">
+                <h2>Bravo !</h2>
+                <h3>Tu t'es jigswappé.e en <span id="completion-time"></span> !</h3>
+            </div>
+        </div>
+        <button id="share-button">Partager</button>
 
 <script src="assets/js/success.js"></script>
 
