change success page

--- a/success.html
+++ b/success.html
@@ -24,7 +24,8 @@
         <div class="success-container">
             <div class="success-text">
                 <h2>Bravo !</h2>
-                <h3>Tu t'es jigswappé.e en <span id="completion-time"></span> !</h3>
+                <h3>Tu t'es jigswappé.e en</h3>
+                <span id="completion-time"></span>
             </div>
         </div>
         <button id="share-button">Partager</button>
